# youtubeSentiment

./: .gitignore  README.md  new_idea_url_analysis.txt
.specify/memory/: constitution.md
backend/: pyproject.toml
backend/src/api/: main.py
backend/src/models/: schemas.py
backend/src/services/: ai_service.py  youtube_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_api.py
backend/tests/integration/: test_scenarios.py
backend/tests/unit/: test_utils.py
frontend/: package.json
frontend/src/: app.js  index.html  style.css
reports/: EICd7f7kenk_analysis.json  EICd7f7kenk_whisper_transcript.txt  LeXk7QUQXd0_analysis.json  LeXk7QUQXd0_transcript.txt
specs/1-sentiment-analysis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-sentiment-analysis/contracts/: api.md
